# researchmind

./: .dockerignore  .gitignore  Cargo.toml  Danh_Sach_Chuc_Nang_ResearchMind.xlsx  Danh_Sach_Chuc_Nang_ResearchMind_Updated.xlsx  Dockerfile  LICENSE  README.md  _tmp_analyze_overlap.py  _tmp_check_logs.py  _tmp_import_check.py  backend.spec  firestore.rules  package-lock.json  prototype_cli.py  render.yaml  researchmind_integration_proposals.md  skills-lock.json  test_all_exports.py  test_debate.py  test_debate_advanced.py  test_docx_export.py  test_gemini.py  test_html_export.py  test_pdf_export.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
VERSION/: VERSION_v0.1.md  VERSION_v0.2.md  VERSION_v0.3.md  VERSION_v0.4.md  VERSION_v0.5.md  VERSION_v0.6.md  VISION_v0.3.md
apps/cloud-sync/: .env.example  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json  wrangler.toml
apps/desktop/: .env.example  .env.production.example  _analyze_ja.cjs  giaidoan1_done.md  implementation_plan_giaidoan2.md  index.html  master_roadmap.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: .env  .gitkeep
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: .env.example  app_state.py  export.py  gateway.json  licensing.py  main.py  pyproject.toml  requirements.txt  test_ocr.py  zotero_import.py
backend/academic/: cache.py  context_builder.py  crossref.py  doi_extractor.py  evidence_engine.py  external_search.py  governance.py  (+21 more)
cloud_gateway/: .dockerignore  .env.cloud  .env.example  Dockerfile  README.md  __init__.py  auth.py  config.py  main.py  providers.py  pytest.ini  quota.py  requirements.txt  schemas.py
crates/memory-core/: Cargo.toml
crates/memory-core/src/: extractor.rs  lib.rs  scanner.rs
crates/memory-graph/: Cargo.toml
crates/memory-graph/src/: graph.rs  lib.rs  relation.rs  timeline.rs
crates/memory-indexer/: Cargo.toml
crates/memory-indexer/src/: db.rs  lib.rs  pipeline.rs
docs/: CI_CD_FLOW.md  CNAME  COMMERCIAL_RELEASE_CHECKLIST.md  FIREBASE_SETUP.md  PAYMENT_SETUP.md  PRODUCT_MODEL.md  RELEASE.md  RENDER_DEPLOY.md  SETUP_PHASE1_2.md  _redirects  academic_benchmark_report.md  academic_paper_draft.md  blog.html  docs.html  features.html  index.html  legal.html  pricing.html  report.html  robots.txt  script.js  sitemap.xml  style.css  test.md
have_done_plan/: next-steps.md  tracking.md
landing-page/: index.html  script.js  style.css
nhat-ky-thuc-tap/: README.md  buoi-1.md  buoi-10.md  buoi-11.md  buoi-12.md  buoi-13.md  buoi-14.md  buoi-15.md  buoi-16.md  buoi-17.md  buoi-18.md  buoi-19.md  buoi-2.md  buoi-20.md  buoi-21.md  buoi-3.md  buoi-4.md  buoi-5.md  buoi-6.md  buoi-7.md  buoi-8.md  buoi-9.md  mau-buoi.md
plan/: HYBRID_MODEL.md  HYBRID_MODEL.md.copy  MemoryOS.docx  ResearchMind_VN_Plan.md  architecture.md  phase1-mvp-spec.md  roadmap.md  stream_summary.md  ux_flow_onboarding.md
scripts/: audit-css-colors.js  build-backend.bat  deploy-gateway.ps1  deploy-gateway.sh  issue_license.py  ocr_pipeline.py  run-backend.ps1
(+337 files in other folders)
