[package]
name = "memory-core"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
sha2 = "0.10"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
docx-rs = "0.4"
log = "0.4"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
