[package]
name = "memory-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-core = { path = "../memory-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
log = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
