[package]
name = "memory-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-core = { path = "../memory-core" }
memory-search = { path = "../memory-search" }
memory-ai = { path = "../memory-ai" }
memory-graph = { path = "../memory-graph" }
memory-security = { path = "../memory-security" }
rusqlite = { version = "0.31", features = ["bundled", "fts5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
thiserror = "1"
