[package]
name = "memory-os-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "memory_os_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
memory-core = { path = "../../../crates/memory-core" }
memory-indexer = { path = "../../../crates/memory-indexer" }
memory-search = { path = "../../../crates/memory-search" }
memory-ai = { path = "../../../crates/memory-ai" }
memory-graph = { path = "../../../crates/memory-graph" }
memory-security = { path = "../../../crates/memory-security" }
tauri = { version = "2", features = ["dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled", "fts5"] }
dirs-next = "2"
