[package]
name = "researchmind-desktop"
version = "0.6.0"
edition = "2021"

[lib]
name = "researchmind_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false , features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "common-controls-v6", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.13", features = ["json"] }
